--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -19,3 +19,12 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
+
+/* Switch general */
+.nav-pills {
+    --bs-nav-link-color: var(--bs-white); 
+    --bs-nav-pills-link-active-color: var(--bs-primary); 
+    --bs-nav-pills-link-active-bg: var(--bs-white);
+    margin-bottom: 15px; /* Ajusta según lo necesario */
+  }
+  
