--- a/src/app/sass/bootstrap.scss
+++ b/src/app/sass/bootstrap.scss
@@ -4,7 +4,7 @@ $azul: #1e3c70;
 $dorado: #bd8c01;
 
 body {
-    background-color: #f2f2f2 !important;
+    background-color: #ffffff !important;
 }
 
 $font-family-sans-serif: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
