--- a/src/app/css/Teacher.module.css
+++ b/src/app/css/Teacher.module.css
@@ -30,14 +30,12 @@
 
 .simplebox{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
     gap: 20px;
     flex-wrap: wrap;
 }
 
 .simplebox div{
+    flex: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -45,4 +43,43 @@
     border:3px solid #cfcfcf ;
     border-radius: 8px;
     padding: 20px;
+}
+        
+.infoHead{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 80px;
+}
+
+.red{
+    position: relative;
+    left: 10px;
+}
+
+.red::before{
+    position: absolute;
+    left: -20px;
+    bottom: 5px;
+    content: "";
+    width: 1rem;
+    height: 1rem;
+    background-color: red;
+}
+
+.green{
+    position: relative;
+    left: 10px;
+}
+
+.green::before{
+    position: absolute;
+    left: -20px;
+    bottom: 5px;
+    content: "";
+    width: 1rem;
+    height: 1rem;
+    background-color: rgb(33, 150, 27);
 }
