--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -70,6 +70,17 @@ table td {
     border: 2px solid rgb(0, 0, 0);
     padding: 8px 16px;
 }
+
+select{
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background: none;
+    border: none;
+    appearance: none;
+}
+
 @media(max-height:600px) {
     main {
         margin-top: 10vh;
