--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -2,6 +2,7 @@
 html,
 body {
     min-height: 100vh;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
 }
@@ -49,7 +50,6 @@ footer {
 
 table {
     text-align: center;
-    border-collapse: collapse;
     border: hidden;
     color: white;
     border-collapse: collapse;
