add course group

--- a/src/app/css/Teacher.module.css
+++ b/src/app/css/Teacher.module.css
@@ -31,7 +31,6 @@
 .simplebox{
     display: flex;
     justify-content: center;
-    gap: 20px;
     flex-wrap: wrap;
 }
 
@@ -44,6 +43,7 @@
     border:3px solid #cfcfcf ;
     border-radius: 8px;
     padding: 20px;
+    margin: 10px;
     min-width: 30%;
     max-width: 90vw;
 }
@@ -54,7 +54,6 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
-    margin-top: 80px;
 }
 
 .red{
