--- a/src/app/css/Login.module.css
+++ b/src/app/css/Login.module.css
@@ -34,6 +34,7 @@
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
   /* Ahora cubre todo */
   z-index: -1;
+  max-width: inherit;
 }
 
 /* Caja de Login */
