--- a/src/app/css/Table.module.css
+++ b/src/app/css/Table.module.css
@@ -1,4 +1,7 @@
 .TableContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: 100vw;
     padding: 20px;
 }
@@ -20,4 +23,10 @@
     z-index: 1;
     background: #30567c;
     border: 2px solid black !important;
+}
+
+@media(max-width:1000px) {
+    .TableContainer{
+        align-items: inherit;
+    }
 }
