--- a/src/app/css/Login.module.css
+++ b/src/app/css/Login.module.css
@@ -58,7 +58,7 @@
 .blueButton {
   width: 100%;
   padding: 10px;
-  background-color: #0084ff;
+  background-color: #3399FF;
   color: white;
   border: none;
   border-radius: 5px;
@@ -66,7 +66,21 @@
 }
 
 .blueButton:hover {
-  background-color: #0056b3;
+  background-color: #3377C2;
+}
+
+.redButton {
+  flex: 1;
+  padding: 10px;
+  background-color: #FF3333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.redButton:hover {
+  background-color: #CC4040;
 }
 
 /* Enlaces */
