--- a/src/app/css/group.module.css
+++ b/src/app/css/group.module.css
@@ -1,8 +1,11 @@
 .sectionGroup {
+    margin: 10px;
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
+    border-radius: 4px;
 }
 
 .group {
@@ -10,10 +13,11 @@
     position: relative;
     cursor: pointer;
     background-color: white;
-    border-radius: 6px;
+    border-radius: 4px;
     padding: 20px;
-    margin: 15px;
+    margin: 10px;
     min-width: 17rem;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 @media(max-width:600px) {
