--- a/src/app/css/Teacher.module.css
+++ b/src/app/css/Teacher.module.css
@@ -1,10 +1,9 @@
-
-.information h3{
+.information h3 {
     flex-direction: row;
     z-index: 1;
 }
 
-.curse{
+.curse {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -12,56 +11,59 @@
     gap: 20px;
 }
 
-.curse div{
+.curse div {
     padding: 20px;
     border: 3px solid #9eb8cd;
-    border-radius: 8px;
+    border-radius: 4px;
     background-color: #b5d4ec;
     min-width: 300px;
 }
 
-.box{
+.box {
     position: relative;
     padding: 20px;
     gap: 20px;
     background-color: white;
-    border-radius: 8px;
+    border-radius: 4px;
 }
 
-.simplebox{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.simplebox div{
+.containerbox {
     flex: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    border:3px solid #cfcfcf ;
-    border-radius: 8px;
+    border: 2px solid #cfcfcf;
+    border-radius: 4px;
     padding: 20px;
     margin: 10px;
     min-width: 30%;
     max-width: 90vw;
 }
-        
-.infoHead{
+
+.simplebox {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    justify-content: start;
+    align-content: center;
+    border-radius: 4px;
 }
 
-.red{
+.infoHead {
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.red {
     position: relative;
     left: 10px;
 }
 
-.red::before{
+.red::before {
     position: absolute;
     left: -20px;
     bottom: 5px;
@@ -71,12 +73,12 @@
     background-color: red;
 }
 
-.green{
+.green {
     position: relative;
     left: 10px;
 }
 
-.green::before{
+.green::before {
     position: absolute;
     left: -20px;
     bottom: 5px;
@@ -84,4 +86,12 @@
     width: 1rem;
     height: 1rem;
     background-color: rgb(33, 150, 27);
+}
+
+@media(max-width:1400px) {
+    .simplebox {
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around;
+    }
 }
