--- a/src/app/css/Table.module.css
+++ b/src/app/css/Table.module.css
@@ -3,17 +3,22 @@
     flex-direction: column;
     align-items: center;
     max-width: 100vw;
-    padding: 20px;
+}
+.row-even {
+    background-color: #f2f2f2;
 }
 
+.row-odd {
+    background-color: #ffffff;
+}
 
 .box {
     position: relative;
     background: white;
-    border-radius: 8px;
+    border-radius: 4px;
     overflow-x: auto;
     max-width: 100%;
-    scrollbar-color: rgb(255, 87, 87) rgba(0, 0, 255, 0);
+    scrollbar-color: rgb(0, 0, 0) rgba(0, 0, 255, 0);
     scrollbar-width: thin;
 }
 
@@ -21,12 +26,13 @@
     position: sticky;
     left: -1px;
     z-index: 1;
-    background: #30567c;
-    border: 2px solid black !important;
 }
 
-@media(max-width:1000px) {
-    .TableContainer{
-        align-items: inherit;
-    }
+.tableButton{
+    padding: 10px;
+    background-color: #3399FF;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 0.8rem;
 }
