--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -51,33 +51,29 @@ footer {
 table {
     text-align: center;
     border: hidden;
-    color: white;
     border-collapse: collapse;
     width: max-content;
     min-width: 900px;
+    color: #4f4f4f;
 }
 
 table th{
-    background-color: #2e83c4;
-}
-
-table td{
-    background-color: #5792bf;
+    background-color: #ffffff;
 }
 
 table th,
 table td {
-    border: 2px solid rgb(0, 0, 0);
+    border-bottom: 2px solid #cfcfcf;
     padding: 8px 16px;
 }
 
 select{
     text-align: center;
-    width: 100%;
     height: 100%;
     margin: 0;
     background: none;
     border: none;
+    border-radius: 4px;
     appearance: none;
 }
 
