--- a/src/app/css/Table.module.css
+++ b/src/app/css/Table.module.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 100vw;
+    max-width: 60vw;
 }
+
 .row-even {
     background-color: #f2f2f2;
 }
@@ -28,11 +29,18 @@
     z-index: 1;
 }
 
-.tableButton{
+.tableButton {
     padding: 10px;
     background-color: #3399FF;
     color: white;
     border: none;
     border-radius: 4px;
     font-size: 0.8rem;
+}
+
+.classCell {
+    background-color: #add8e6;
+    font-weight: bold;
+    vertical-align: middle;
+    border-radius: 8px;
 }
