--- a/src/app/css/Teacher.module.css
+++ b/src/app/css/Teacher.module.css
@@ -44,10 +44,10 @@
 .simplebox {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: start;
+    justify-content: space-around;
     align-content: center;
     border-radius: 4px;
+    width: 100%;
 }
 
 .infoHead {
@@ -56,6 +56,7 @@
     align-content: space-around;
     flex-wrap: wrap;
     overflow: hidden;
+    gap: 10px;
 }
 
 .red {
@@ -86,12 +87,4 @@
     width: 1rem;
     height: 1rem;
     background-color: rgb(33, 150, 27);
-}
-
-@media(max-width:1400px) {
-    .simplebox {
-        flex-direction: row;
-        width: 100%;
-        justify-content: space-around;
-    }
 }
