--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -77,6 +77,19 @@ select{
     appearance: none;
 }
 
+.containerSection{
+background: white;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  max-width: 90vw;
+}
+
 @media(max-height:600px) {
     main {
         margin-top: 10vh;
