--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -80,7 +80,6 @@ select{
 .containerSection{
 background: white;
   padding: 10px;
-  margin: 10px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -88,6 +87,7 @@ background: white;
   align-content: center;
   align-items: center;
   max-width: 90vw;
+  border-radius: 4px;
 }
 
 @media(max-height:600px) {
