--- a/src/app/css/Table.module.css
+++ b/src/app/css/Table.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 80vw;
+    max-height: 80vw;
 }
 
 .row-even {
@@ -17,7 +18,7 @@
     position: relative;
     background: white;
     border-radius: 4px;
-    overflow-x: auto;
+    overflow: auto;
     max-width: 100%;
     scrollbar-color: rgb(0, 0, 0) rgba(0, 0, 255, 0);
     scrollbar-width: thin;
@@ -25,8 +26,22 @@
 
 .fixedCol {
     position: sticky;
-    left: -1px;
+    left: 0;
+    z-index: 0;
+    box-shadow: 0px 0px 0 1px #cfcfcf;
+}
+.fixedRow {
+    position: sticky;
+    top: 0;
     z-index: 1;
+    box-shadow: 0px 0px 0 1px #cfcfcf;
+}
+.fixedColRow {
+    position: sticky;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    box-shadow: 0px 0px 0 1px #cfcfcf;
 }
 
 .tableButton {
@@ -42,7 +57,6 @@
     color:white;
     background-color: #00a2d8;
     font-weight: bold;
-    vertical-align: middle;
     border-radius: 8px;
     word-wrap: break-word;
     white-space: normal;
