--- a/src/app/css/calendar.css
+++ b/src/app/css/calendar.css
@@ -3,9 +3,9 @@
     width: 350px;
     max-width: 100%;
     background: white;
-    border: 1px solid #ddd;
+    border: none;
     border-radius: 4px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
 /* Encabezado del calendario (mes y año) */
@@ -57,4 +57,5 @@
 .calendar{
     display: flex;
     justify-content: center;
+    margin: 10px;
 }
