--- a/src/app/css/NotificationTable.module.css
+++ b/src/app/css/NotificationTable.module.css
@@ -109,10 +109,11 @@
 
 .formContainer input,
 .formContainer textarea {
+    background-color: #f2f2f2;
     width: 100%;
     padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: none;
+    border-radius: 4px 4px 0 0;
 }
 
 .addButton {
@@ -123,9 +124,16 @@
     cursor: pointer;
 }
 
+.button{
+    color: #007bff;
+    background-color: transparent;
+    border: none;
+}
+
 .charCount {
     font-size: 12px;
     color: gray;
+    margin: 0;
 }
 
 .errorText {
