--- a/src/app/css/NotificationTable.module.css
+++ b/src/app/css/NotificationTable.module.css
@@ -5,6 +5,7 @@
 
 .addButton {
     background-color: #007bff;
+    font-weight: bold;
     color: white;
     border: none;
     padding: 8px 12px;
@@ -102,9 +103,10 @@
     flex-direction: column;
     gap: 10px;
     background: white;
-    padding: 15px;
+    padding: 10px;
     border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.13);
+    min-width: 250px;
 }
 
 .formContainer input,
@@ -114,14 +116,6 @@
     padding: 8px;
     border: none;
     border-radius: 4px 4px 0 0;
-}
-
-.addButton {
-    background: #007bff;
-    color: white;
-    border-radius: 4px;
-    font-size: 20px;
-    cursor: pointer;
 }
 
 .button{
@@ -200,25 +194,6 @@
     background: #f9f9f9;
 }
 
-/* Botón flotante para agregar notificaciones */
-.addButton {
-    background: #007bff;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 20px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-}
-
-.addButton:hover {
-    background: #0056b3;
-}
-
 /* Borde degradado */
 .borderGradient {
     position: absolute;
@@ -232,4 +207,3 @@
     z-index: -1;
     max-width: inherit;
   }
-  
