--- a/src/app/css/Table.module.css
+++ b/src/app/css/Table.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 80vw;
-    max-height: 80vw;
+    max-width: 90vw;
+    max-height: 100vw;
 }
 
 .row-even {
@@ -20,7 +20,7 @@
     border-radius: 4px;
     overflow: auto;
     max-width: 100%;
-    scrollbar-color: rgb(0, 0, 0) rgba(0, 0, 255, 0);
+    scrollbar-color: #3399FF rgba(255, 255, 255, 0);
     scrollbar-width: thin;
 }
 
@@ -61,4 +61,8 @@
     word-wrap: break-word;
     white-space: normal;
     max-width: 150px;
+}
+
+.select{
+    padding: 0 2px;
 }
