--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -83,7 +83,7 @@ hr{
 }
 
 .containerSection{
-background: white;
+  background: white;
   padding: 10px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -91,7 +91,7 @@ background: white;
   justify-content: center;
   align-content: center;
   align-items: center;
-  max-width: 90vw;
+  max-width: 100%;
   border-radius: 4px;
 }
 
