--- a/src/app/css/Course.module.css
+++ b/src/app/css/Course.module.css
@@ -15,6 +15,8 @@
 .header{
     flex: 1;
     position: relative;
+    height: 100%;
+    width: 100%;
 }
 
 .textHeader{
@@ -61,6 +63,12 @@
 .center{
     width: 100%;
     margin: 10px;
+}
+
+.viewHeader{
+    border-radius: 4px;
+    width: 100%;
+    height: 10rem;
 }
 
 @media(max-width:500px){
