--- a/src/app/css/Course.module.css
+++ b/src/app/css/Course.module.css
@@ -21,9 +21,10 @@
 
 .textHeader{
     padding: 1rem;
-    position: relative;
+    position: absolute;
     color: white;
-
+    font-weight: bold;
+    text-align: start;
 }
 
 .image{
@@ -68,7 +69,9 @@
 .viewHeader{
     border-radius: 4px;
     width: 100%;
-    height: 10rem;
+    height: 8rem;
+    overflow: hidden;
+    border: 1px solid #cfcfcf;
 }
 
 @media(max-width:500px){
