--- a/src/app/css/calendar.css
+++ b/src/app/css/calendar.css
@@ -14,8 +14,6 @@
     justify-content: space-between;
     align-items: center;
     background: #4a90e2;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
     padding: 8px;
 }
 
@@ -53,7 +51,10 @@
     color: white !important;
 }
 .calendar{
+    background-color: white;
+    border-radius: 4px;
     display: flex;
     justify-content: center;
     margin: 10px;
+    overflow: hidden;
 }
