--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -1,7 +1,7 @@
 /* Hace que el body ocupe toda la pantalla */
 html,
 body {
-    min-height: 100vh;
+    height: 100vh;
     max-width: 100vw;
     display: flex;
     flex-direction: column;
@@ -10,8 +10,13 @@ body {
 /* Empuja el contenido para que el footer quede abajo */
 main {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
     flex: 1;
-    justify-content: center;
+    margin-top: 4rem;
+    width: 100%;
+    height: auto;
 }
 
 /* Asegura que el footer siempre esté visible */
@@ -47,6 +52,8 @@ footer {
     background-size: cover;
     background-position: center center;
     opacity: 0.15;
+    top: 0;
+    left: 0;
 }
 
 table {
@@ -90,12 +97,5 @@ hr{
   justify-content: center;
   align-content: center;
   align-items: center;
-  max-width: 100%;
-  border-radius: 4px;
-}
-
-@media(max-height:600px) {
-    main {
-        margin-top: 10vh;
-    }
+  width: 100%;
 }
