--- a/src/app/css/Teacher.module.css
+++ b/src/app/css/Teacher.module.css
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     border: 2px solid #cfcfcf;
     border-radius: 4px;
     padding: 20px;
