--- a/src/app/css/card.module.css
+++ b/src/app/css/card.module.css
@@ -1,4 +1,4 @@
-.containerCard{
+.containerCard {
     display: flex;
 }
 
@@ -8,7 +8,7 @@
     width: 15rem;
     height: 15rem;
     margin: 10px;
-    border-radius: 12px;
+    border-radius: 4px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -16,6 +16,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .card::before {
@@ -26,9 +28,10 @@
     width: 100%;
     height: 20%;
     background: linear-gradient(to right, #0547ff, #6698e9);
-    border-radius: 12px 12px 0 0;
+    border-radius: 4px 4px 0 0;
     transition: height 0.3s ease;
     border-bottom: 1px solid #cfcfcf;
+    z-index: 1;
 }
 
 .card h3 {
@@ -38,15 +41,16 @@
     font-weight: bold;
     margin-top: 10px;
     transition: font-size 0.3s ease;
-    z-index: 2; 
+    z-index: 2;
 }
 
 .card i {
-    font-size: 7rem; 
+    font-size: 7rem;
     color: black;
     position: relative;
     margin-top: 8px;
-    transition: transform 0.3s ease;
+    transition: transform 1s ease;
+    z-index: 3;
 }
 
 .card:hover i {
@@ -60,4 +64,45 @@
 
 .card:hover h3 {
     font-size: 2rem;
+}
+
+@media(max-width: 767px) {
+
+    .card {
+        width: 100%;
+        height: 5rem;
+        margin: 5px;
+        padding: 5px;
+        align-items: start;
+        transition: justify-content 0.5s ease;
+    }
+
+    .card:hover{
+        justify-content: center;
+    }
+
+    .card::before {
+        width: 100%;
+        height: 50%;
+    }
+
+    .card i {
+        top: 0;
+        right: 10px;
+        position: absolute;
+        font-size: 200%;
+        margin-top: 0px;
+        transition: margin 0.3s ease, color 0.3s ease;
+    }
+
+    .card:hover i {
+        transform: scale(1.8);
+        color: rgb(255, 255, 255);
+        margin: 18px 10px 0 0;
+    }
+
+    .card:hover::before {
+        width: 100%;
+        height: 100%;
+    }
 }
