--- a/src/app/css/Table.module.css
+++ b/src/app/css/Table.module.css
@@ -56,7 +56,7 @@
 
 .classCell {
     color:white;
-    background-color: #00a2d8;
+    background-color: #2ac7fb;
     font-weight: bold;
     border-radius: 8px;
     word-wrap: break-word;
