--- a/src/app/css/User.module.css
+++ b/src/app/css/User.module.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 10px;
 }
 
 .containerUsers {
@@ -15,7 +16,7 @@
 
 .users {
     background-color: #f8f9fa;
-    border-radius: 10px;
+    border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 15px;
     width: 200px;
@@ -43,4 +44,17 @@
     font-weight: bold;
     color: #007bff;
     cursor: pointer;
+}
+
+.button{
+    background: rgb(70, 153, 237);
+    color: white;
+    border-radius: 4px;
+    border: none;
+    font-weight: bold;
+    padding: 10px;
+}
+
+.button:hover{
+    background: rgb(30, 132, 234);
 }
