--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -99,3 +99,13 @@ hr{
   align-items: center;
   width: 100%;
 }
+
+.searchBox{
+    padding: 10px;
+    width: 100%;
+    max-width: 300px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    outline: none;
+    transition: 0.3s;
+}
