--- a/src/app/css/User.module.css
+++ b/src/app/css/User.module.css
@@ -4,21 +4,24 @@
     align-items: center;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
 }
 
 .containerUsers {
     list-style: none;
     padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-items: center;
+    width: 100%;
+    gap: 10px;
 }
 
 .users {
     background-color: #f8f9fa;
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 15px;
+    padding: 10px;
     width: 200px;
     text-align: center;
 }
@@ -34,7 +37,8 @@
     font-weight: bold;
 }
 
-.body h5, .footer h5 {
+.body h5,
+.footer h5 {
     font-size: 1rem;
     margin: 5px 0;
 }
@@ -46,7 +50,7 @@
     cursor: pointer;
 }
 
-.button{
+.button {
     background: rgb(70, 153, 237);
     color: white;
     border-radius: 4px;
@@ -55,6 +59,6 @@
     padding: 10px;
 }
 
-.button:hover{
+.button:hover {
     background: rgb(30, 132, 234);
 }
